--- a/Function Samples/java/Encryption/build.xml
+++ b/Function Samples/java/Encryption/build.xml
@@ -6,7 +6,7 @@
 	</target>
 
 	<target name="compile">
-		<javac srcdir="src/com/urv/blackeagle/function/ratio/" destdir="bin" includeantruntime="false">
+		<javac srcdir="src/com/urv/blackeagle/function/encryption/" destdir="bin" includeantruntime="false">
 			<classpath>
 		        <pathelement 
 		        	path="../blackeagle-runtime-1.0.jar"/>
@@ -14,12 +14,12 @@
 					path="lib/json-simple-1.1.1.jar"/>
 			</classpath>		
 		</javac>
-		<jar destfile="bin/ratio-1.0.jar" 
-			basedir="bin"
-			includes="com/urv/blackeagle/function/ratio/*">
-		</jar>
+	    <jar destfile="bin/encryption-1.0.jar" 
+	        basedir="bin"
+	     	includes="com/urv/blackeagle/function/encryption/*">
+	    </jar>
 	</target>
 	
 	<target name="build" depends="clean, compile"/>
-	
+
 </project>
