--- a/Function Samples/java/NoopDataIterator/build.xml
+++ b/Function Samples/java/NoopDataIterator/build.xml
@@ -9,7 +9,7 @@
 		<javac srcdir="src/com/urv/blackeagle/function/noopdataiterator/" destdir="bin" includeantruntime="false">
 			<classpath>
 		        <pathelement 
-		        	path="lib/blackeagle-runtime-1.0.jar"/>
+		        	path="../blackeagle-runtime-1.0.jar"/>
 				<pathelement 
 					path="lib/json-simple-1.1.1.jar"/>
 			</classpath>		
