--- a/Function Samples/java/Reducer/build.xml
+++ b/Function Samples/java/Reducer/build.xml
@@ -8,10 +8,10 @@
 	<target name="compile">
 		<javac srcdir="src/com/urv/blackeagle/function/reducer/" destdir="bin" includeantruntime="false">
 			<classpath>
-		        <pathelement 
-		        	path="../blackeagle-runtime-1.0.jar"/>
-				<pathelement 
-					path="lib/json-simple-1.1.1.jar"/>
+		        <pathelement path="../blackeagle-runtime-1.0.jar"/>
+				<pathelement path="lib/json-simple-1.1.1.jar"/>
+				<pathelement path="lib/async-http-client-2.0.0.jar"/>
+				<pathelement path="lib/slf4j-api-1.7.21.jar"/>
 			</classpath>		
 		</javac>
 	    <jar destfile="bin/reducer-1.0.jar" 
