--- a/Function Samples/java/ContentBasedAccessControl/build.xml
+++ b/Function Samples/java/ContentBasedAccessControl/build.xml
@@ -1,25 +1,38 @@
 <project>
-	
-	<target name="clean">
-		<delete dir="bin" />
-		<mkdir dir="bin" />
-	</target>
 
 	<target name="compile">
-		<javac srcdir="src/com/urv/blackeagle/function/cbac/" destdir="bin" includeantruntime="false">
+		<mkdir dir="build" />
+		<manifest file="build/MANIFEST.MF">
+		  <attribute name="Main-Class"
+		             value="com.urv.blackeagle.function.cbac.Handler" />
+		</manifest>
+		<javac srcdir="src/com/urv/blackeagle/function/cbac/" destdir="build" includeantruntime="false">
 			<classpath>
 		        <pathelement 
 		        	path="../blackeagle-runtime-1.0.jar"/>
-		        <pathelement 
-		        	path="lib/json_simple-1.1.jar"/>
 			</classpath>		
 		</javac>
-	    <jar destfile="bin/cbac-1.0.jar" 
-	        basedir="bin"
+	    <jar destfile="build/cbac-1.0.jar"
+	    	manifest="build/MANIFEST.MF"
+	        basedir="build"
 	     	includes="com/urv/blackeagle/function/cbac/*">
 	    </jar>
 	</target>
 	
-	<target name="build" depends="clean, compile"/>
+	<target name="pack" depends="compile">
+		<delete dir="bin" />
+		<mkdir dir="bin" />
+		<tar destfile = "bin/cbac.tar.gz" compression="gzip">
+			<tarfileset dir="build">
+			        <include name="cbac-1.0.jar"/>
+			</tarfileset>
+			<tarfileset dir=".">
+			        <include name="lib/*.jar"/>
+			</tarfileset>
+		</tar>
+		<delete dir="build" />
+	</target>
+	
+	<target name="build" depends="compile, pack"/>
 
 </project>
