--- a/Function Samples/java/RateLimiter/build.xml
+++ b/Function Samples/java/RateLimiter/build.xml
@@ -1,27 +1,37 @@
 <project>
 	
-	<target name="clean">
-		<delete dir="bin" />
-		<mkdir dir="bin" />
-	</target>
-
 	<target name="compile">
-		<javac srcdir="src/com/urv/blackeagle/function/ratelimiter/" destdir="bin" includeantruntime="false">
+		<mkdir dir="build" />
+		<manifest file="build/MANIFEST.MF">
+		  <attribute name="Main-Class"
+		             value="com.urv.blackeagle.function.ratelimiter.Handler" />
+		</manifest>
+		<javac srcdir="src/com/urv/blackeagle/function/ratelimiter/" destdir="build" includeantruntime="false">
 			<classpath>
-		        <pathelement 
-		        	path="../blackeagle-runtime-1.0.jar"/>
-				<pathelement 
-					path="lib/json-simple-1.1.1.jar"/>
-				<pathelement 
-					path="lib/guava-21.0.jar"/>
+		        <pathelement path="../blackeagle-runtime-1.0.jar"/>
+				<pathelement path="lib/guava-21.0.jar"/>
 			</classpath>		
 		</javac>
-	    <jar destfile="bin/ratelimiter-1.0.jar" 
-	        basedir="bin"
+	    <jar destfile="build/ratelimiter-1.0.jar"
+	    	manifest="build/MANIFEST.MF"
+	        basedir="build"
 	     	includes="com/urv/blackeagle/function/ratelimiter/*">
 	    </jar>
 	</target>
 	
-	<target name="build" depends="clean, compile"/>
+	<target name="pack" depends="compile">
+			<delete dir="bin" />
+			<mkdir dir="bin" />
+			<tar destfile = "bin/ratelimiter.tar.gz" compression="gzip">
+				<tarfileset dir="build">
+				     <include name="ratelimiter-1.0.jar"/>
+				</tarfileset>
+				<tarfileset dir=".">
+				        <include name="lib/*.jar"/>
+				</tarfileset>
+			</tar>
+			<delete dir="build" />
+	</target>
+	<target name="build" depends="compile, pack"/>
 
 </project>
