--- a/Function Samples/java/DataAggregation/Reducer/build.xml
+++ b/Function Samples/java/DataAggregation/Reducer/build.xml
@@ -1,12 +1,12 @@
 <project>
 	
-	<target name="clean">
-		<delete dir="bin" />
-		<mkdir dir="bin" />
-	</target>
-
 	<target name="compile">
-		<javac srcdir="src/com/urv/blackeagle/function/reducer/" destdir="bin" includeantruntime="false">
+		<mkdir dir="build" />
+		<manifest file="build/MANIFEST.MF">
+		  <attribute name="Main-Class"
+		             value="com.urv.blackeagle.function.reducer.Handler" />
+		</manifest>
+		<javac srcdir="src/com/urv/blackeagle/function/reducer/" destdir="build" includeantruntime="false">
 			<classpath>
 		        <pathelement path="../../blackeagle-runtime-1.0.jar"/>
 				<pathelement path="lib/json-simple-1.1.1.jar"/>
@@ -14,12 +14,27 @@
 				<pathelement path="lib/slf4j-api-1.7.21.jar"/>
 			</classpath>		
 		</javac>
-	    <jar destfile="bin/reducer-1.0.jar" 
-	        basedir="bin"
+	    <jar destfile="build/uone-reducer-1.0.jar"
+	    	manifest="build/MANIFEST.MF"
+	        basedir="build"
 	     	includes="com/urv/blackeagle/function/reducer/*">
 	    </jar>
 	</target>
 	
-	<target name="build" depends="clean, compile"/>
+	<target name="pack" depends="compile">
+			<delete dir="bin" />
+			<mkdir dir="bin" />
+			<tar destfile = "bin/uone-reducer.tar.gz" compression="gzip">
+				<tarfileset dir="build">
+				     <include name="uone-reducer-1.0.jar"/>
+				</tarfileset>
+				<tarfileset dir=".">
+				        <include name="lib/*.jar"/>
+				</tarfileset>
+			</tar>
+			<delete dir="build" />
+	</target>
+	
+	<target name="build" depends="compile, pack"/>
 
 </project>
