--- a/Function Samples/java/DataAggregation/UbuntuOneFilter/build.xml
+++ b/Function Samples/java/DataAggregation/UbuntuOneFilter/build.xml
@@ -1,25 +1,38 @@
 <project>
 	
-	<target name="clean">
-		<delete dir="bin" />
-		<mkdir dir="bin" />
-	</target>
-
 	<target name="compile">
-		<javac srcdir="src/com/urv/blackeagle/function/uone/" destdir="bin" includeantruntime="false">
+		<mkdir dir="build" />
+		<manifest file="build/MANIFEST.MF">
+		  <attribute name="Main-Class"
+		             value="com.urv.blackeagle.function.uone.Handler" />
+		</manifest>
+		<javac srcdir="src/com/urv/blackeagle/function/uone/" destdir="build" includeantruntime="false">
 			<classpath>
-		        <pathelement 
-		        	path="../../blackeagle-runtime-1.0.jar"/>
-		        <pathelement 
-		        	path="lib/json_simple-1.1.jar"/>
+		        <pathelement path="../../blackeagle-runtime-1.0.jar"/>
+				<pathelement path="lib/json_simple-1.1.jar"/>
 			</classpath>		
 		</javac>
-	    <jar destfile="bin/uone-1.0.jar" 
-	        basedir="bin"
+	    <jar destfile="build/uone-filter-1.0.jar"
+	    	manifest="build/MANIFEST.MF"
+	        basedir="build"
 	     	includes="com/urv/blackeagle/function/uone/*">
 	    </jar>
 	</target>
 	
-	<target name="build" depends="clean, compile"/>
+	<target name="pack" depends="compile">
+			<delete dir="bin" />
+			<mkdir dir="bin" />
+			<tar destfile = "bin/uone-filter.tar.gz" compression="gzip">
+				<tarfileset dir="build">
+				     <include name="uone-filter-1.0.jar"/>
+				</tarfileset>
+				<tarfileset dir=".">
+				        <include name="lib/*.jar"/>
+				</tarfileset>
+			</tar>
+			<delete dir="build" />
+	</target>
+	
+	<target name="build" depends="compile, pack"/>
 
 </project>
