--- a/Function Samples/java/SignatureValidator/build.xml
+++ b/Function Samples/java/SignatureValidator/build.xml
@@ -1,27 +1,37 @@
 <project>
-	
-	<target name="clean">
-		<delete dir="bin" />
-		<mkdir dir="bin" />
-	</target>
 
 	<target name="compile">
-		<javac srcdir="src/com/urv/blackeagle/function/signaturevalidator/" destdir="bin" includeantruntime="false">
+		<mkdir dir="build" />
+		<manifest file="build/MANIFEST.MF">
+		  <attribute name="Main-Class"
+		             value="com.urv.blackeagle.function.signaturevalidator.Handler" />
+		</manifest>
+		<javac srcdir="src/com/urv/blackeagle/function/signaturevalidator/" destdir="build" includeantruntime="false">
 			<classpath>
 		        <pathelement path="../blackeagle-runtime-1.0.jar"/>
-		        <pathelement path="lib/bcmail-jdk15on-156.jar"/>
-		        <pathelement path="lib/bcpkix-jdk15on-156.jar"/>
-		        <pathelement path="lib/bcprov-jdk15on-156.jar"/>
-		        <pathelement path="lib/mail.jar"/>
-				<pathelement path="lib/json-simple-1.1.1.jar"/>
 			</classpath>		
 		</javac>
-	    <jar destfile="bin/signature-validator-1.0.jar" 
-	        basedir="bin"
+	    <jar destfile="build/signature-validator-1.0.jar"
+	    	manifest="build/MANIFEST.MF"
+	        basedir="build"
 	     	includes="com/urv/blackeagle/function/signaturevalidator/*">
 	    </jar>
 	</target>
 	
-	<target name="build" depends="clean, compile"/>
+	<target name="pack" depends="compile">
+			<delete dir="bin" />
+			<mkdir dir="bin" />
+			<tar destfile = "bin/signature-validator.tar.gz" compression="gzip">
+				<tarfileset dir="build">
+				     <include name="signature-validator-1.0.jar"/>
+				</tarfileset>
+				<tarfileset dir=".">
+				        <include name="lib/*.jar"/>
+				</tarfileset>
+			</tar>
+			<delete dir="build" />
+	</target>
+	
+	<target name="build" depends="compile, pack"/>
 
 </project>
