--- a/Function Samples/java/DataAggregation/Reducer/build.xml
+++ b/Function Samples/java/DataAggregation/Reducer/build.xml
@@ -2,9 +2,9 @@
 	
 	<target name="compile">
 		<mkdir dir="build" />
-		<javac srcdir="src/com/urv/blackeagle/function/reducer/" destdir="build" includeantruntime="false">
+		<javac srcdir="src/com/urv/zion/function/reducer/" destdir="build" includeantruntime="false">
 			<classpath>
-		        <pathelement path="../../blackeagle-runtime-1.0.jar"/>
+		        <pathelement path="../../ZionDockerDaemon-1.0.jar"/>
 				<pathelement path="lib/json-simple-1.1.1.jar"/>
 				<pathelement path="lib/async-http-client-2.0.0.jar"/>
 				<pathelement path="lib/slf4j-api-1.7.21.jar"/>
@@ -12,7 +12,7 @@
 		</javac>
 	    <jar destfile="build/uone-reducer-1.0.jar"
 	        basedir="build"
-	     	includes="com/urv/blackeagle/function/reducer/*">
+	     	includes="com/urv/zion/function/reducer/*">
 	    </jar>
 	</target>
 	
