--- a/Function Samples/java/DataAggregation/UbuntuOneFilter/build.xml
+++ b/Function Samples/java/DataAggregation/UbuntuOneFilter/build.xml
@@ -2,15 +2,15 @@
 	
 	<target name="compile">
 		<mkdir dir="build" />
-		<javac srcdir="src/com/urv/blackeagle/function/uone/" destdir="build" includeantruntime="false">
+		<javac srcdir="src/com/urv/zion/function/uone/" destdir="build" includeantruntime="false">
 			<classpath>
-		        <pathelement path="../../blackeagle-runtime-1.0.jar"/>
+		        <pathelement path="../../ZionDockerDaemon-1.0.jar"/>
 				<pathelement path="lib/json_simple-1.1.jar"/>
 			</classpath>		
 		</javac>
 	    <jar destfile="build/uone-filter-1.0.jar"
 	        basedir="build"
-	     	includes="com/urv/blackeagle/function/uone/*">
+	     	includes="com/urv/zion/function/uone/*">
 	    </jar>
 	</target>
 	
