--- a/Function Samples/java/ImageResizer/build.xml
+++ b/Function Samples/java/ImageResizer/build.xml
@@ -2,14 +2,14 @@
 	
 	<target name="compile">
 		<mkdir dir="build" />
-		<javac srcdir="src/com/urv/blackeagle/function/imageresizer/" destdir="build" includeantruntime="false">
+		<javac srcdir="src/com/urv/zion/function/imageresizer/" destdir="build" includeantruntime="false">
 			<classpath>
-		        <pathelement path="../blackeagle-runtime-1.0.jar"/>
+		        <pathelement path="../ZionDockerDaemon-1.0.jar"/>
 			</classpath>		
 		</javac>
 	    <jar destfile="build/image-resizer-1.0.jar"
 	        basedir="build"
-	     	includes="com/urv/blackeagle/function/imageresizer/*">
+	     	includes="com/urv/zion/function/imageresizer/*">
 	    </jar>
 	</target>
 	
