--- a/Function Samples/java/RateLimiter/build.xml
+++ b/Function Samples/java/RateLimiter/build.xml
@@ -2,15 +2,15 @@
 	
 	<target name="compile">
 		<mkdir dir="build" />
-		<javac srcdir="src/com/urv/blackeagle/function/ratelimiter/" destdir="build" includeantruntime="false">
+		<javac srcdir="src/com/urv/zion/function/ratelimiter/" destdir="build" includeantruntime="false">
 			<classpath>
-		        <pathelement path="../blackeagle-runtime-1.0.jar"/>
+		        <pathelement path="../ZionDockerDaemon-1.0.jar"/>
 				<pathelement path="lib/guava-21.0.jar"/>
 			</classpath>		
 		</javac>
 	    <jar destfile="build/ratelimiter-1.0.jar"
 	        basedir="build"
-	     	includes="com/urv/blackeagle/function/ratelimiter/*">
+	     	includes="com/urv/zion/function/ratelimiter/*">
 	    </jar>
 	</target>
 	
